[tool.poetry]
name = "flaskstarter"
version = "0.5.3"
description = "A Flask project start-up CLI to create Flask modular ready projects."
authors = ["Felipe Bastos Nunes <felipe.bastosn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/felipebastos/flaskstart"
homepage = "https://github.com/felipebastos/flaskstart"
keywords = ['flask', 'cli', 'project']
classifiers = [
    'Development Status :: 3 - Alpha',      #"3 - Alpha", "4 - Beta" or "5 - Production/Stable"
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
  ]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
Jinja2 = "^3.0.3"
MarkupSafe = "^2.1.0"

[tool.poetry.dev-dependencies]
click = "^8.0.4"
Jinja2 = "^3.0.3"
MarkupSafe = "^2.1.0"
pytest = "6.2.4"
pylint = "2.8.3"
Flask = "2.0.2"
Flask-Migrate = "3.1.0"
dynaconf = "3.1.7"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flaskstarter = 'flaskstarter.flaskstart_cli:flaskstarter'
